Pull #18627: Add `JavaUtilAPIs`